--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 
 <body>
-    
-<header>
-    <h1>Imagem</h1>
 
-    <ul>
-        <li> Escola </li>
-        <li> Estudantes </li>
-    </ul>
+    <header>
+        <img src="alurastart logo 1.png" alt="Logo da alura Start">
 
-</header>
+        <ul>
+            <li> Escola </li>
+            <li> Estudantes </li>
+        </ul>
 
-    
-  
+    </header>
+
+
+
 
 
 </body>
