--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
 
-    <header>
+    <header class="cabecalho">
         <img class="cabecalho-imagem" src="alurastart logo 1.png" alt="Logo da alura Start">
 
-        <ul>
-            <li> Escola </li>
-            <li> Estudantes </li>
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item"> Escola </li>
+            <li class="cabecalho-lista-item"> Estudantes </li>
         </ul>
 
     </header>
