--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
 
 
 
+    <section class="escola">
+        <h2 class="escola-titulo"> Sobre a escola </h2>
+
+        <p class="escola-texto-um">
+            A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da
+            Programação. A turma mais famosa é a Segunda Série A.
+        </p>
+        <p class="escola-texto-dois">
+
+            Uma turma diversa e engajada, as vezes, um pouco
+            bagunceira, mas que entrega excelentes resultados!
+        </p>
+
+    </section>
+
+
+
 
 
 </body>
