--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             bagunceira, mas que entrega excelentes resultados!
         </p>
 
+        <img src="Formula-amico 1 (1).png" alt=" Professor em frente de um quadro.">
+
     </section>
 
 
