--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             bagunceira, mas que entrega excelentes resultados!
         </p>
 
-        <img src="Formula-amico 1 (1).png" alt=" Professor em frente de um quadro.">
+        <img class="escola-imagem" src="Formula-amico 1 (1).png" alt=" Professor em frente de um quadro.">
 
     </section>
 
