--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 
     </header>
 
-
-
     <section class="escola">
 
         <div class="escola-div-conteudo">
@@ -37,7 +35,7 @@
             </p>
         </div>
 
-        <img class="escola-imagem" src="" alt=" Professor em frente de um quadro.">
+        <img class="escola-imagem" src="Formula-amico 1 (1).png" alt=" Professor em frente de um quadro.">
 
     </section>
 
