--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 
     </section>
 
+    <section class="estudante">
+        <h2 class="estudante-titulo"> Quem são os nosso estudantes?</h2>
+
+
+        
+    </section>
+
 
 
 </body>
