--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <h2 class="estudante-titulo"> Quem são os nosso estudantes?</h2>
 
 
-        
+        <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
+
     </section>
 
 
