--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
 
     <section class="estudante">
-        <h2 class="estudante-titulo"> Quem são os nosso estudantes?</h2>
+        <h2 class="estudante-titulo"> Quem são os nossos estudantes?</h2>
 
 
         <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
