--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
     <section class="estudante">
         <h2 class="estudante-titulo"> Quem são os nossos estudantes?</h2>
         <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-        <h3  class="estudante-imagem">Glmar</h3>
-        
-        <img src="logo-do-facebook.png" alt="logo-do-facebook">
-        <img src="logotipo-do-github.png" alt="logotipo-do-github">
-        <img src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
+        <h3 class="estudante-nome">Glmar</h3>
+
+        <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
+        <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+        <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
 
     </section>
 
