--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
 
     <section class="estudante">
         <h2 class="estudante-titulo"> Quem são os nossos estudantes?</h2>
-        <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-        <h3 class="estudante-nome">Glmar</h3>
+        <div>
+            <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
+            <h3 class="estudante-nome">Glmar</h3>
 
-        <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
-        <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
-        <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
-
+            <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
+            <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+            <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
+        </div>
     </section>
 
 
