--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
     <section class="estudante">
         <h2 class="estudante-titulo"> Quem são os nossos estudantes?</h2>
-        <div>
+       
+        <div class="estudante-div">
+
             <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
             <h3 class="estudante-nome">Glmar</h3>
 
