--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
                 <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
                 <h3 class="estudante-nome">Gilmar</h3>
 
+                <a href="https://github.com/">GitHub</a>
                 <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
                 <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
                 <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
             </div>
-
-
 
             <div class="estudante-div">
 
@@ -71,6 +70,15 @@
                 <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
             </div>
 
+            <div class="estudante-div">
+
+                <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
+                <h3 class="estudante-nome">Gilmar</h3>
+
+                <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
+                <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+                <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
+            </div>
 
             <div class="estudante-div">
 
@@ -82,7 +90,15 @@
                 <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
             </div>
 
+            <div class="estudante-div">
 
+                <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
+                <h3 class="estudante-nome">Gilmar</h3>
+
+                <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
+                <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+                <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
+            </div>
 
             <div class="estudante-div">
 
@@ -94,6 +110,15 @@
                 <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
             </div>
 
+            <div class="estudante-div">
+
+                <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
+                <h3 class="estudante-nome">Gilmar</h3>
+
+                <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
+                <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+                <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
+            </div>
 
             <div class="estudante-div">
 
@@ -105,7 +130,6 @@
                 <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
             </div>
 
-
             <div class="estudante-div">
 
                 <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
@@ -115,42 +139,6 @@
                 <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
                 <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
             </div>
-
-
-
-            <div class="estudante-div">
-
-                <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-                <h3 class="estudante-nome">Gilmar</h3>
-
-                <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
-                <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
-                <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
-            </div>
-
-
-            <div class="estudante-div">
-
-                <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-                <h3 class="estudante-nome">Gilmar</h3>
-
-                <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
-                <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
-                <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
-            </div>
-
-
-            <div class="estudante-div">
-
-                <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-                <h3 class="estudante-nome">Gilmar</h3>
-
-                <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
-                <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
-                <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
-            </div>
-
-
 
             <div class="estudante-div">
 
