--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
                 <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
                 <h3 class="estudante-nome">Gilmar</h3>
 
-                <a href="https://github.com/">GitHub</a>
-                
+
+
                 <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
-                <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+                <a href="https://github.com/">
+                    <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
+                </a>
                 <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
             </div>
 
