--- a/index.html
+++ b/index.html
@@ -49,19 +49,8 @@
 
         <div class="estudantes-todos">
 
-            <div class="estudante-div">
 
-                <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-                <h3 class="estudante-nome">Gilmar</h3>
-
-
-
-                <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
-                <a href="https://github.com/">
-                    <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
-                </a>
-                <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
-            </div>
+            <span></span>
 
             <div class="estudante-div">
 
@@ -93,15 +82,9 @@
                 <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
             </div>
 
-            <div class="estudante-div">
+            <span></span>
 
-                <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-                <h3 class="estudante-nome">Gilmar</h3>
-
-                <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
-                <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
-                <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
-            </div>
+            <span></span>
 
             <div class="estudante-div">
 
@@ -132,27 +115,7 @@
                 <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
                 <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
             </div>
-
-            <div class="estudante-div">
-
-                <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-                <h3 class="estudante-nome">Gilmar</h3>
-
-                <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
-                <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
-                <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
-            </div>
-
-            <div class="estudante-div">
-
-                <img class="estudante-imagem" src="gatinho.jpeg" alt="Imagem de um gatinho fofo">
-                <h3 class="estudante-nome">Gilmar</h3>
-
-                <img class="estudante-icone" src="logo-do-facebook.png" alt="logo-do-facebook">
-                <img class="estudante-icone" src="logotipo-do-github.png" alt="logotipo-do-github">
-                <img class="estudante-icone" src="simbolo-do-instagram.png" alt="simbolo-do-instagram">
-            </div>
-
+            <span></span>
         </div>
     </section>
 
