--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
         </div>
     </section>
 
+<footer class="rodape">
+
+<img src="alurastart logo 1.png" alt="alurastart">
+
+
+</footer>
 
 </body>
-
 </html>
