--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <footer class="rodape">
 
-<img src="alurastart logo 1.png" alt="alurastart">
+<img class="rodape-imagem" src="alurastart logo 1.png" alt="alurastart">
 
 
 </footer>
